--- a/.github/workflows/e2e-macos.yaml
+++ b/.github/workflows/e2e-macos.yaml
@@ -55,6 +55,11 @@ jobs:
           role-to-assume: ${{ secrets.ROLE }}
           role-session-name: credhelper-test
           aws-region: ${{ secrets.REGION }}
+      - name: Echo GitHub context, and os information
+        run: |  
+          echo "left side: steps.vars.outputs.has_creds: ${{ steps.vars.outputs.has_creds }} " 
+          echo "guess: steps.vars.outputs.has_creds == true: ${{ steps.vars.outputs.has_creds == true}}"
+          echo "guess: steps.vars.outputs.has_creds == 'true': ${{ steps.vars.outputs.has_creds == 'true'}}"           
       - name: Clean up previous files
         run: |
           sudo rm -rf /opt/finch
@@ -65,26 +70,7 @@ jobs:
           fi
           if pgrep '^socket_vmnet'; then
             sudo pkill '^socket_vmnet'
-          fi
-      - name: Echo GitHub context, and os information
-        run: |
-          echo "GitHub Context Information:"
-          echo "github.event_name: ${{ github.event_name }}"
-          echo "github.repository: ${{ github.repository }}"     
-          echo "github.event.pull_request.head.repo.full_name: ${{ github.event.pull_request.head.repo.full_name }}"
-          echo "github.actor: ${{ github.actor }}"
-          echo "startsWith(inputs.os, 'amazon'): ${{ startsWith(inputs.os, 'amazon') }}"
-          echo "inputs.version: ${{ inputs.version}}"   
-          echo "left side: steps.vars.outputs.has_creds: ${{ steps.vars.outputs.has_creds }} " 
-          echo "left side(guess): steps.vars.outputs.has_creds == true: ${{ steps.vars.outputs.has_creds == true}}"
-          echo "left side(guess): steps.vars.outputs.has_creds == 'true': ${{ steps.vars.outputs.has_creds == 'true'}}"           
-          echo "inputs.version: ${{ inputs.version}}"    
-          echo "!(startsWith(inputs.os, 'amazon') && inputs.version == '2'): ${{ !(startsWith(inputs.os, 'amazon') && inputs.version == '2') }}"     
-          echo "if statement to allow AWS credentials: ${{ steps.vars.outputs.has_creds == true && (!(startsWith(inputs.os, 'amazon') && inputs.version == '2' ))}}" 
-      - name: Verify AWS credentials configuration
-        if: ${{ steps.vars.outputs.has_creds == true && (!(startsWith(inputs.os, 'amazon') && inputs.version == '2' ))}}
-        run: |
-          echo "Verifying AWS credentials configuration."            
+          fi        
       - name: Install Rosetta 2
         run: echo "A" | softwareupdate --install-rosetta || true
       - run: brew install lz4 automake autoconf libtool yq
