--- a/.github/workflows/e2e-windows.yaml
+++ b/.github/workflows/e2e-windows.yaml
@@ -94,6 +94,7 @@ jobs:
         run: |
           $VM_REPORT="${{ github.workspace }}/reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-report.json"
           $CONTAINER_REPORT="${{ github.workspace }}/reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-container-report.json"
+          $VM_SERIAL_REPORT="${{ github.workspace }}/reports/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-serial-report.json"
           
           if (Test-Path $VM_REPORT) {
             Write-Host "VM report file exists. Uploading to S3..."
@@ -110,6 +111,14 @@ jobs:
           } else {
             Write-Host "Container report file does not exist. Skipping upload."
           }       
+
+          if (Test-Path $VM_SERIAL_REPORT) {
+            Write-Host "VM serial report file exists. Uploading to S3..."
+            aws s3 cp $VM_SERIAL_REPORT "s3://finch-e2e-test-log-reports/${{ inputs.os }}-${{ inputs.arch }}/${{ github.run_id }}-${{ github.run_attempt }}-e2e-vm-serial-report.json.json"
+            Write-Host "VM serial report uploaded successfully."
+          } else {
+            Write-Host "VM serial report file does not exist. Skipping upload."
+          } 
       - name: Remove Finch VM and Clean Up Previous Environment
         if: ${{ always() }}
         timeout-minutes: 2
