--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "finch-core"]
 	path = deps/finch-core
-	url = https://github.com/runfinch/finch-core.git
+	url = https://github.com/pendo324/finch-core.git
