--- a/.github/workflows/build-and-test-msi.yaml
+++ b/.github/workflows/build-and-test-msi.yaml
@@ -16,6 +16,7 @@ on:
     - cron: '0 9 * * *'
 env:
   GO111MODULE: on
+  GO_VERSION: '1.22.9'
 
 permissions:
   # This is required for configure-aws-credentials to request an OIDC JWT ID token to access AWS resources later on.
@@ -67,6 +68,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install awscli
+      - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
+        with:
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: ${{ needs.get-tag-name.outputs.tag }}
@@ -183,6 +187,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install awscli
+      - uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5.0.2
+        with:
+          go-version: ${{ env.GO_VERSION }}
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: ${{ needs.get-tag-name.outputs.tag }}
