--- a/.github/workflows/build-pkg.yaml
+++ b/.github/workflows/build-pkg.yaml
@@ -25,6 +25,9 @@ permissions:
   # This is required for actions/checkout
   contents: read
 
+env:
+  GO_VERSION: '1.22.9'
+
 jobs:
   build:
     runs-on:
@@ -45,8 +48,7 @@ jobs:
           submodules: true
       - uses: actions/setup-go@41dfa10bad2bb2ae585af6ee5bb4d7d973ad74ed # v5.1.0
         with:
-          go-version-file: go.mod
-          cache: false
+          go-version: ${{ env.GO_VERSION }}
       - name: Build for macOS ${{ inputs.version }} (${{ inputs.output_arch }})
         run: |
           brew install lz4 automake autoconf libtool yq llvm
