ci: Create and reuse script to clean up WSL
Signed-off-by: Subash Kotha <subkotha@amazon.com>

--- a/.github/workflows/build-and-test-msi.yaml
+++ b/.github/workflows/build-and-test-msi.yaml
@@ -80,16 +80,9 @@ jobs:
           role-session-name: windows-msi
           aws-region: ${{ secrets.WINDOWS_REGION }}
       - name: Remove Finch VM
-        timeout-minutes: 5
-        run: |
-          $ErrorActionPreference = 'Ignore'
-          taskkill /f /im wslservice.exe 2> nul || cmd /c "exit /b 0"
-          sc query LxssManager | findstr "STATE" | findstr /C:"STOPPED" > nul && net start LxssManager
-          wsl --list --verbose
-          wsl --list --verbose | findstr /C:"Running" > nul && wsl --shutdown
-          echo "WSL has been shut down successfully."
-          wsl --list --quiet | findstr /C:"lima-finch" > nul && wsl --unregister lima-finch
-          wsl --list --verbose --all
+        timeout-minutes: 2
+        shell: pwsh
+        run: ./scripts/cleanup_wsl.ps1
       - name: Clean up previous files
         run: |
           takeown /F C:\actions-runner\_work\finch /R
@@ -148,18 +141,10 @@ jobs:
           aws s3 cp "./msi-builder/build/signed/Finch-$tag.msi" "s3://${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }}/Finch-$tag.msi" --no-progress
       - name: Remove Finch VM and Clean Up Previous Environment
         if: ${{ always() }}
-        timeout-minutes: 5
+        timeout-minutes: 2
+        shell: pwsh
         run: |
-          # We want these cleanup commands to always run, ignore errors so the step completes.
-          $ErrorActionPreference = 'Ignore'
-          taskkill /f /im wslservice.exe 2> nul || cmd /c "exit /b 0"
-          sc query LxssManager | findstr "STATE" | findstr /C:"STOPPED" > nul && net start LxssManager
-          wsl --list --verbose
-          wsl --list --verbose | findstr /C:"Running" > nul && wsl --shutdown
-          echo "WSL has been shut down successfully."
-          wsl --list --quiet | findstr /C:"lima-finch" > nul && wsl --unregister lima-finch
-          wsl --list --verbose --all
-          Remove-Item C:\Users\Administrator\AppData\Local\.finch -Recurse
+          ./scripts/cleanup_wsl.ps1
           make clean
           cd deps/finch-core && make clean
           exit 0 # Cleanup may set the exit code e.g. if a file doesn't exist; just ignore
@@ -204,17 +189,9 @@ jobs:
           role-session-name: msi-test
           aws-region: ${{ secrets.REGION }}
       - name: Remove Finch VM
-        timeout-minutes: 5
-        run: |
-          # We want these cleanup commands to always run, ignore errors so the step completes.
-          $ErrorActionPreference = 'Ignore'
-          taskkill /f /im wslservice.exe 2> nul || cmd /c "exit /b 0"
-          sc query LxssManager | findstr "STATE" | findstr /C:"STOPPED" > nul && net start LxssManager
-          wsl --list --verbose
-          wsl --list --verbose | findstr /C:"Running" > nul && wsl --shutdown
-          echo "WSL has been shut down successfully."
-          wsl --list --quiet | findstr /C:"lima-finch" > nul && wsl --unregister lima-finch
-          wsl --list --verbose --all
+        timeout-minutes: 2
+        shell: pwsh
+        run: ./scripts/cleanup_wsl.ps1
       - name: Clean up previous files
         run: |
           Remove-Item C:\Users\Administrator\.finch -Recurse -ErrorAction Ignore
@@ -252,19 +229,9 @@ jobs:
             $env:INSTALLED="true"
             make test-e2e-vm
       - name: Remove Finch VM
-        timeout-minutes: 5
-        run: |
-          # We want these cleanup commands to always run, ignore errors so the step completes.
-          $ErrorActionPreference = 'Ignore'
-          taskkill /f /im wslservice.exe 2> nul || cmd /c "exit /b 0"
-          sc query LxssManager | findstr "STATE" | findstr /C:"STOPPED" > nul && net start LxssManager
-          wsl --list --verbose
-          wsl --list --verbose | findstr /C:"Running" > nul && wsl --shutdown
-          echo "WSL has been shut down successfully."
-          Start-Sleep -s 10
-          wsl --list --quiet | findstr /C:"lima-finch" > nul && wsl --unregister lima-finch
-          Remove-Item C:\Users\Administrator\AppData\Local\.finch -Recurse
-          wsl --list --verbose --all
+        timeout-minutes: 2
+        shell: pwsh
+        run: ./scripts/cleanup_wsl.ps1
       - name: Run container e2e tests
         uses: nick-fields/retry@7152eba30c6575329ac0576536151aca5a72780e # v3.0.0
         with:
@@ -290,18 +257,10 @@ jobs:
           }
       - name: Remove Finch VM and Clean Up Previous Environment
         if: ${{ always() }}
-        timeout-minutes: 5
+        timeout-minutes: 2
+        shell: pwsh
         run: |
-          # We want these cleanup commands to always run, ignore errors so the step completes.
-          $ErrorActionPreference = 'Ignore'
-          taskkill /f /im wslservice.exe 2> nul || cmd /c "exit /b 0"
-          sc query LxssManager | findstr "STATE" | findstr /C:"STOPPED" > nul && net start LxssManager
-          wsl --list --verbose
-          wsl --list --verbose | findstr /C:"Running" > nul && wsl --shutdown
-          echo "WSL has been shut down successfully."
-          wsl --list --quiet | findstr /C:"lima-finch" > nul && wsl --unregister lima-finch
-          wsl --list --verbose --all
-          Remove-Item C:\Users\Administrator\AppData\Local\.finch -Recurse
+          ./scripts/cleanup_wsl.ps1
           make clean
           cd deps/finch-core && make clean
           exit 0 # Cleanup may set the exit code e.g. if a file doesn't exist; just ignore
