--- a/.github/workflows/upload-build-to-S3.yaml
+++ b/.github/workflows/upload-build-to-S3.yaml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
 env:
   GO111MODULE: on
+  GO_VERSION: '1.22.9'
 
 permissions:
   # This is required for configure-aws-credentials to request an OIDC JWT ID token to access AWS resources later on.
@@ -23,7 +24,7 @@ jobs:
           submodules: true
       - uses: actions/setup-go@41dfa10bad2bb2ae585af6ee5bb4d7d973ad74ed # v5.1.0
         with:
-          go-version-file: go.mod
+          go-version: ${{ env.GO_VERSION }}
           cache: false
       - name: Make macos aarch64 build
         run: |
@@ -52,7 +53,7 @@ jobs:
           submodules: true
       - uses: actions/setup-go@41dfa10bad2bb2ae585af6ee5bb4d7d973ad74ed # v5.1.0
         with:
-          go-version-file: go.mod
+          go-version: ${{ env.GO_VERSION }}
           cache: false
       - name: Make macos x86_64 build
         run: |
