ci: add only nightly run and merge to mainline generate test reprot
Signed-off-by: Jingwei Wang <jweiw@amazon.com>

fix Amazon Linux if condition

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

ci: only merges to mainline and nightly runs will generate log reports

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

Squashed commit message for the first 10 commits

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

fix minor errors

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

fix minor errors

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

fix minor errors

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

fix minor errors

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

fix minor errors

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test2

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test3

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test4

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test5

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test-windows

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test-windows2

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test-windows3

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test-windows4

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test-windows5

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test-windows6

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

seprate CI jobs test1

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

fix: duplicate uploading

Signed-off-by: Jingwei Wang <jweiw@amazon.com>

fix: change job name and use sha to include actions
Signed-off-by: Jingwei Wang <jweiw@amazon.com>

--- a/.github/workflows/build-and-test-msi.yaml
+++ b/.github/workflows/build-and-test-msi.yaml
@@ -153,7 +153,7 @@ jobs:
           make clean
           cd deps/finch-core && make clean
           exit 0 # Cleanup may set the exit code e.g. if a file doesn't exist; just ignore
-  
+
   msi-e2e-tests:
     needs:
       - get-tag-name
@@ -232,11 +232,11 @@ jobs:
             # set path to use newer ssh version
             $newPath = (";C:\Program Files\Git\bin\;" + "C:\Program Files\Git\usr\bin\;" + "$env:Path")
             $env:Path = $newPath
-            
+
             git status
             git clean -f -d
             $env:INSTALLED="true"
-            make test-e2e-vm
+            make test-e2e-vm-with-report
       - name: Remove Finch VM
         timeout-minutes: 2
         shell: pwsh
@@ -250,11 +250,11 @@ jobs:
             # set path to use newer ssh version
             $newPath = (";C:\Program Files\Git\bin\;" + "C:\Program Files\Git\usr\bin\;" + "$env:Path")
             $env:Path = $newPath
-            
+
             git status
             git clean -f -d
             $env:INSTALLED="true"
-            make test-e2e-container
+            make test-e2e-container-with-report
       - name: Uninstall Finch silently
         if: ${{ always() }}
         run: |
