--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -43,6 +43,7 @@ on:
 jobs:
   git-secrets:
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - name: Pull latest awslabs/git-secrets repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -65,6 +66,7 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 2
     steps:
       - run: echo "Skipping CI for docs & contrib files"
   unit-tests:
@@ -72,19 +74,23 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 2
     steps:
       - run: echo "Skipping CI for docs & contrib files"
   go-linter:
     name: lint
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - run: echo "Skipping CI for docs & contrib files"
   go-mod-tidy-check:
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - run: echo "Skipping CI for docs & contrib files"
   check-licenses:
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - run: echo "Skipping CI for docs & contrib files"
   macos-e2e-tests:
@@ -112,6 +118,7 @@ jobs:
     uses: ./.github/workflows/e2e-docs.yaml
   mdlint:
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: avto-dev/markdown-lint@04d43ee9191307b50935a753da3b775ab695eceb # v1.5.0
