--- a/.github/workflows/lint-pr-title.yaml
+++ b/.github/workflows/lint-pr-title.yaml
@@ -13,6 +13,7 @@ jobs:
   main:
     name: conventional-commit
     runs-on: ubuntu-latest
+    timeout-minutes: 1
     steps:
       - uses: amannn/action-semantic-pull-request@0723387faaf9b38adef4775cd42cfd5155ed6017 # v5.5.3
         with:
