--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -7,6 +7,7 @@ name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
     steps:
