--- a/.github/workflows/upload-installer-to-release.yaml
+++ b/.github/workflows/upload-installer-to-release.yaml
@@ -14,6 +14,7 @@ jobs:
   get-tag-name:
     name: Get tag name
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     outputs:
       tag: ${{ steps.check-tag.outputs.tag }}
     steps:
@@ -30,6 +31,7 @@ jobs:
   upload-installers:
     needs: get-tag-name
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
