--- a/.github/workflows/upload-msi-to-release.yaml
+++ b/.github/workflows/upload-msi-to-release.yaml
@@ -14,6 +14,7 @@ jobs:
   get-version-tag:
     name: Get the version, tag and validate the format
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     outputs:
       tag: ${{ steps.check-tag.outputs.tag }}
       version: ${{ steps.check-tag.outputs.version }}
@@ -40,6 +41,7 @@ jobs:
   upload-windows-msi:
     needs: get-version-tag
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@4fc4975a852c8cd99761e2de1f4ba73402e44dd9 # v4.0.3
