ci: bump min Go version to 1.23
Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -24,9 +24,9 @@ linters-settings:
     checks: ["all", "-ST1003"]
 linters:
   enable:
+    - copyloopvar
     - errname
     - errorlint
-    - exportloopref
     - forcetypeassert
     - gocritic
     - godot
